# mcp-rl-agents

./: .gitignore  EPIC_PLAN.md  GOALS.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: test.yml
src/train_agent/: __init__.py  config.py  main.py  model_schemas.py  train.py
src/train_agent/data/: dataset_generator.py  lightning_data_module.py
src/train_agent/inference/: __init__.py  vllm_engine.py
src/train_agent/training/: __init__.py  batch_preparation.py  grpo.py  lightning_module.py  trajectory.py
src/train_agent/utils/: debug_utils.py  mcp_utils.py  settings.py
tests/: __init__.py  test_rollout.py  test_vllm_engine.py
tests/inference/: test_vllm_engine.py
tests/training/: test_batch_preparation.py  test_grpo.py
