[project]
name = "train-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "fastmcp>=2.12.4",
    "openpipe-art[backend]>=0.4.11",
    "tenacity>=9.1.2",
    "torchtune @ git+https://github.com/pytorch/torchtune.git@67ab86b94de9e7ac7dd9850113ebe69e2bbd307c",
]

[project.scripts]
train-agent = "train_agent.main:cli"


[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]
