[project]
name = "train-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "fastmcp>=2.12.4",
    "tenacity>=9.1.2",
    "torch>=2.5.0",
    "pytorch-lightning>=2.4.0",
    "transformers>=4.44.0",
    "peft>=0.12.0",
    "vllm>=0.6.0",
    "pydantic>=2.0.0",
    "nest-asyncio>=1.5.0",
]

[project.scripts]
train-agent = "train_agent.main:cli"


[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.13.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
